package com.attendance.payroll.entity;

public enum PayrollStatus {
    PENDING,
    PAID
}
